[package]
name = "wooting_visualizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wooting-sdk = "0.1.0"
wooting-sdk = {git = "https://github.com/TanTanDev/rust-wooting-sdk.git"}
rand = "0.7.3"
device_query = "0.2.4"